--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,16 @@ security:
             logout:
                 path: app_logout
                 target: app_login 
+        
+                # Other form login configurations...
+                # Make sure to remove entry_point and custom_authenticator if not needed
+            # Add or update the following lines
+            custom_authenticator: App\Security\AuthAuthenticator
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800
+                path: /
+                always_remember_me: true
                 # Redirect to login page after logout
 
 
