ajout methode de sms

--- a/.env
+++ b/.env
@@ -38,3 +38,10 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+#Ici vous allez saisir vos identifiants Twilio
+TWILIO_DSN=twilio://SID:TOKEN@default?from=FROM
+twilio_account_sid=ACa5878e87279f325c8ba5a43ff21c5a69
+twilio_auth_token=2658dfa671f9494f733660e1c9dc108f
+twilio_from_number=+15076985148
+twilio_to_number=+21621069300
+###< symfony/twilio-notifier ###
