--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,6 +24,7 @@ security:
                 lifetime: 604800
                 path: /
                 always_remember_me: true
+            custom_authenticator: App\Security\Authenticator
                 # Redirect to login page after logout
 
 
