--- a/.env
+++ b/.env
@@ -38,4 +38,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
+#MAILER_DSN=smtp://5c40149d884fe8:c66349ac5a566b@sandbox.smtp.mailtrap.io:2525
+#MAILER_DSN=smtp://localhost:1025
+# .env
+MAILER_DSN=smtp://pacelearningresp:24395408@mail.gmail.com
+
 ###< symfony/mailer ###
