add methode de pagination et ajout image dans show.pdf

--- a/.env
+++ b/.env
@@ -34,14 +34,14 @@ APP_SECRET=0f6475e0c8f3aa362103db4a3bc5d623
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
-
+APP_ENV=dev
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
 #Ici vous allez saisir vos identifiants Twilio
 TWILIO_DSN=twilio://SID:TOKEN@default?from=FROM
-twilio_account_sid=ACa5878e87279f325c8ba5a43ff21c5a69
-twilio_auth_token=2658dfa671f9494f733660e1c9dc108f
-twilio_from_number=+15076985148
+twilio_account_sid=AC1e04a4d5701be15b2b1cc7f607b8ac0c
+twilio_auth_token=f8e2fcae052b6d0da209b727f7c42270
+twilio_from_number=+12562865682
 twilio_to_number=
 ###< symfony/twilio-notifier ###
