--- a/.env
+++ b/.env
@@ -32,10 +32,17 @@ DATABASE_URL=mysql://root:@localhost:3306/projet
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
-
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MAILER_DSN=gmail+smtp://rihabtlili2020@gmail.com:eslhybwposwdldmi@smtp.gmail.com
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
+GOOGLE_RECAPTCHA_SITE_KEY=6LftLccpAAAAAFevt3JkRUJQFS1cbLe54IVgprDD
+GOOGLE_RECAPTCHA_SECRET_KEY=6LftLccpAAAAAAyKScW3eXPDafqCFOlsqkwSW6yK
+
 ###< symfony/mailer ###
-APP_DEBUG=1
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
