--- a/.env
+++ b/.env
@@ -44,3 +44,11 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 MAILER_DSN=smtp://pacelearningresp:24395408@mail.gmail.com
 
 ###< symfony/mailer ###
+
+###> openai-php/symfony ###
+# Generate your own API credentials through the OpenAI Platform portal.
+# https://platform.openai.com/account/api-keys
+OPENAI_API_KEY=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
+OPENAI_ORGANIZATION=
+
+###< openai-php/symfony ###
