--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.19",
+        "nyholm/psr7": "^1.8",
+        "openai-php/client": "^0.8.5",
+        "openai-php/symfony": "^0.8.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.27",
         "sensio/framework-extra-bundle": "^6.2",
@@ -40,6 +43,7 @@
         "symfony/string": "5.4.*",
         "symfony/translation": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
+        "symfony/ux-react": "^2.17",
         "symfony/ux-turbo": "^2.16",
         "symfony/validator": "5.4.*",
         "symfony/web-link": "5.4.*",
