2nd attempt of integration quizzes

--- a/.env
+++ b/.env
@@ -49,5 +49,5 @@ MAILER_DSN=smtp://pacelearningresp:24395408@mail.gmail.com
 # Generate your own API credentials through the OpenAI Platform portal.
 # https://platform.openai.com/account/api-keys
 OPENAI_ORGANIZATION=
-
+OPENAI_API_KEY=sk-
 ###< openai-php/symfony ###
