--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,10 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.9",
+        "endroid/qr-code": "^4.8",
         "endroid/qr-code-bundle": "^4.3",
         "hwi/oauth-bundle": "^2.2",
+        "php-http/guzzle6-adapter": "^2.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.27",
         "sensio/framework-extra-bundle": "*",
