Youtube Courses added

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     PaceLearning: 'C:\Users\USER\Pidev\public\formations_imgs'
+    pdf_directory: '%kernel.project_dir%/public/formations_imgs'
 
 # config/services.yaml
 services:
