Certification and Quiz generation added

--- a/.env
+++ b/.env
@@ -41,10 +41,10 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 #MAILER_DSN=smtp://5c40149d884fe8:c66349ac5a566b@sandbox.smtp.mailtrap.io:2525
 #MAILER_DSN=smtp://localhost:1025
 # .env
-MAILER_DSN=smtp://pacelearningresp:24395408@mail.gmail.com
 
 ###< symfony/mailer ###
-
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MAILER_DSN=gmail+smtp://rihabtlili2020@gmail.com:eslhybwposwdldmi@smtp.gmail.com
 ###> openai-php/symfony ###
 # Generate your own API credentials through the OpenAI Platform portal.
 # https://platform.openai.com/account/api-keys
