--- a/.env
+++ b/.env
@@ -41,6 +41,9 @@ GOOGLE_RECAPTCHA_SITE_KEY=6LftLccpAAAAAFevt3JkRUJQFS1cbLe54IVgprDD
 GOOGLE_RECAPTCHA_SECRET_KEY=6LftLccpAAAAAAyKScW3eXPDafqCFOlsqkwSW6yK
 
 ###< symfony/mailer ###
+GOOGLE_CLIENT_ID=1034613205295-ua7fjuihabfe2piner4l3so0kkmlsvh3.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=https://127.0.0.1/connect/google/check
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
