--- a/config/packages/endroid_qr_code.yaml
+++ b/config/packages/endroid_qr_code.yaml
@@ -1,9 +1,10 @@
 endroid_qr_code:
-    default:
-        writer: Endroid\QrCode\Writer\PngWriter
+    custom:
+        writer: Endroid\QrCode\Writer\SvgWriter
+        data: https://www.youtube.com/watch?v=0wRCb52GeIg
         size: 300
-        margin: 10
-        encoding: 'UTF-8'
-        errorCorrectionLevel: 'low'
+        errorCorrectionLevel: 'high'
         roundBlockSizeMode: 'margin'
-        validateResult: false
+        logoPath: '%kernel.project_dir%/public/logo.png'
+        logoResizeToWidth: 150
+        logoPunchoutBackground: true
