--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,16 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.9",
-        "endroid/qr-code": "^4.8",
+        "endroid/qr-code": "*",
         "endroid/qr-code-bundle": "^4.3",
         "hwi/oauth-bundle": "^2.2",
+        "knpuniversity/oauth2-client-bundle": "^2.18",
+        "league/oauth2-google": "^4.0",
+        "liip/imagine-bundle": "*",
         "php-http/guzzle6-adapter": "^2.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.27",
+        "scheb/2fa-google-authenticator": "*",
         "sensio/framework-extra-bundle": "*",
         "symfony/asset": "5.4.*",
         "symfony/asset-mapper": "^5.4 | ^6.3",
