--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         "endroid/qr-code": "*",
         "endroid/qr-code-bundle": "^4.3",
         "hwi/oauth-bundle": "^2.2",
+        "knplabs/knp-paginator-bundle": "^5.9",
         "knpuniversity/oauth2-client-bundle": "^2.18",
         "league/oauth2-google": "^4.0",
-        "liip/imagine-bundle": "*",
         "php-http/guzzle6-adapter": "^2.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.27",
